--- a/style.css
+++ b/style.css
@@ -452,7 +452,7 @@ section {
   flex-wrap: wrap;
 }
 
-.blogs .box {
+.blogs .box-container .box {
   background: #111;
   width: 32%;
   border-radius: 8px;
@@ -600,6 +600,9 @@ footer {
 
   .home .content p {
     font-size: 1.5rem;
+  }
+  .blogs .box-container .box {
+    width: 100%;
   }
 }
 
